# inline-jni

./: CMakeLists.txt  LICENSE  README.md  arrays.h  class_cast_impl.h  class_constructor.h  class_to_string.h  class_wrapper.h  errors.h  field_access.h  field_access_impl.h  jni_basic.h  jni_helpers.h  jni_operators.h  jni_structures.h  jni_types.h  jnipp.h  method_call_impl.h  method_calls.h  object_test.h  type_signatures.h  unwrappers.h  wrappers.h
examples/: main.cpp
